Fix Halo and Billboard Normal and Behavior #36233

Closed
opened 2013-07-20 19:09:07 +02:00 by Vitor Balbio · 7 comments

%%%Looks like Halo and Billboard always worked wrong cause it aim to track the -X axis instead the +X. So we get always a inverted normal.
This patch fix this strange behavior changing the "track to camera" axis to +X and automatically fix the normal problem.

OBS: So to update old projects you will need put the visible face of the billboard plane to +X instead -X (what looks more natural to me)
OBS2: If Backface Culling is off you don't need any change in the file.

Test File:
http://www.pasteall.org/blend/22925

Picture comparations:
http://www.pasteall.org/pic/56008
%%%

%%%Looks like Halo and Billboard always worked wrong cause it aim to track the -X axis instead the +X. So we get always a inverted normal. This patch fix this strange behavior changing the "track to camera" axis to +X and automatically fix the normal problem. OBS: So to update old projects you will need put the visible face of the billboard plane to +X instead -X (what looks more natural to me) OBS2: If Backface Culling is off you don't need any change in the file. Test File: http://www.pasteall.org/blend/22925 Picture comparations: http://www.pasteall.org/pic/56008 %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Nice fix, applied r58693.
note, you can switch the order of the cross product rather then negating.%%%

%%%Nice fix, applied r58693. note, you can switch the order of the cross product rather then negating.%%%

%%%This patch fixes the normal direction but makes backface-culled faces flip the wrong way (faces flip away from the camera).

Since this makes halos become invisible for existing files, reverting this patch. - see bug [#36959]

Shaded halos are less common, a fix here would still be nice but flipping face directions is not an option.

reverted r58693 and reopening.

%%%

%%%This patch fixes the normal direction but makes backface-culled faces flip the wrong way (faces flip away from the camera). Since this makes halos become invisible for existing files, reverting this patch. - see bug [#36959] Shaded halos are less common, a fix here would still be nice but flipping face directions is not an option. reverted r58693 and reopening. %%%
Campbell Barton removed their assignment 2016-08-11 06:37:37 +02:00

Removed subscriber: @ideasman42

Removed subscriber: @ideasman42

Added subscriber: @dfelinto

Added subscriber: @dfelinto

Changed status from 'Confirmed' to: 'Archived'

Changed status from 'Confirmed' to: 'Archived'
Dalai Felinto self-assigned this 2019-12-23 18:45:14 +01:00

Hi, thanks for your patch.

We are undergoing a Tracker Curfew where we are automatically closing old patches.

If you think the patch is still relevant please update and re-submit it. For new features make sure there is a clear design from the user level perspective.

Hi, thanks for your patch. We are undergoing a [Tracker Curfew ](https://code.blender.org/?p=3861) where we are automatically closing old patches. If you think the patch is still relevant please update and re-submit it. For new features make sure there is a clear design from the user level perspective.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36233
No description provided.