patch [#36233] Fix Halo and Billboard Normal and Behavior from Vitor Balbio (vitorbalbio)

Fixes billboard flipping (flipped normals and textures too)